More z-index added to avoid the burguer button get hidden

--- a/src/components/header/HeaderComponent.scss
+++ b/src/components/header/HeaderComponent.scss
@@ -5,7 +5,7 @@
 
 header {
 	position: absolute;
-	z-index: -1;
+	z-index: -10;
 }
 
 .header {
@@ -32,7 +32,6 @@ header {
 			transform: translateX(0);
 
 			&.header__nav--hidden {
-				z-index: -10;
 				@include modules.hiddenNavbar(-100%);
 			}
 
